--- a/index.html
+++ b/index.html
@@ -36,6 +36,51 @@
         <li style="list-style: none; margin-left: 20px;">Scetch.io if you want more freedom <a href="https://sketch.io/">Click here for scetch io</a>   </li>
 
     </ol>
+    <h1>Popular HTML Tags</h1>
+    <ol></ol>
+      <li> Headers: h1 h2 h3 h4 h5 h6 paragraph:p</li>
+      <li> ordered list: ol Unordered list: ul </li>
+      <li style="list-style: none; margin-left: 20px;"> inside of the ol or ul components we use li as a list </li>
+      <li style="list-style: none; margin-left: 20px;"> <img src="./Assets/ulExample.png"></img> </li>
+      <li> image: img inside of the tag use src and type your file path  </li>
+      <li style="list-style: none; margin-left: 20px;"> <img src="./Assets/imgSrcExample.png"></img> </li>
+      <li> navigation bar: nav within you use anchor tags: a nd an href inside the tag with the path of your other html file   </li>
+      <li style="list-style: none; margin-left: 20px;"> <img src="./Assets/navExample.png"></img> </li>
+
+      <h1>CSS class 3 cheat sheet</h1>
+      <ol>
+        <li>To begin using Css create a new file called style.css</li>
+        <li>in the head of your html make sure there is a link to this file</li>
+        <!-- place example below -->
+        <li>Next give your element an ID by writing id="your naming convention" inside of the html tag</li>
+        <li> Inside of your CSS file call the id by writing #yourNameingConvention{}</li>
+        <li>if you want to change all the elements of a certain tag you can just call the tag for example 
+          if you call h1 it will change ALL of your h1 
+        </li>
+
+      </ol>
+      <h1>popular css properties</h1>
+        <li>margin border and padding </li>
+        <li style="list-style: none; margin-left: 20px;">I recomend starting by putting the direction first for example margin-left padding-right</li>
+        <li style="list-style: none; margin-left: 20px;"> margins are located inside the border</li>
+        <li style="list-style: none; margin-left: 20px;"> padding is located outside the border</li>
+        <li> background or background color: sets the background or background color </li>
+        <li> color is going to change the color of the font</li>
+        <li> font-size</li>
+        <li> height and width set the height and width </li>
+        <li> floats allow you to move an element quickly to the left of right can be a bit messy better to use boxes</li>
+        <li> display sets the type of box used for an HTML element (e.g. block, inline, or flex). </li>
+        <li style="list-style: none; margin-left: 20px;">  Just as the name suggests, inline displays an element in the same line as the rest. Specifying any height and width properties will be of no use, as it follows the height and width of the line, of which it is a part.</li>
+        <li style="list-style: none; margin-left: 20px;"> Displays an element as a block element. It starts on a new line and takes up take up as much horizontal space as they can. Block-level elements do not appear in the same line, but breaks the existing line and appear in the next line.</li>
+        <li style="list-style: none; margin-left: 20px;"> Displays an element as a block element. It starts on a new line and takes up take up as much horizontal space as they can. Block-level elements do not appear in the same line, but breaks the existing line and appear in the next line.</li>
+        <li style="list-style: none; margin-left: 20px;"> this is difficult to grasp at first look up a guide to flexbox for more advice</li>
+        <li> position: sets the positioning type of an element (e.g. static, relative, absolute, fixed). It specifies the type of positioning used for an element. The position property can be set to different values such as static, relative, absolute, fixed, etc.</li>
+        <li style="list-style: none; margin-left: 20px;"> static: this is the default value, all elements are in order as they appear in the document.</li>
+        <li style="list-style: none; margin-left: 20px;"> Relative - the element is positioned relative to its normal position.</li>
+        <li style="list-style: none; margin-left: 20px;"> Absolute - the element is positioned absolutely to its first positioned parent.</li>
+        <li style="list-style: none; margin-left: 20px;"> Fixed - the element is positioned related to the browser window.</li>
+    
+    
 
 	<script src="index.js"></script>
   </body>
