change made for final class

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Latinitas Instructions Class 1 </title>
+    <title>Latinitas Instructions Final Class</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet"></link>
     
@@ -42,7 +42,7 @@
     </nav>
 
     <img src="./Assets/LatinitasPic.jpeg" id="latinitasPic"></img>
-    <h1>Instructions for Class 1</h1>
+    <h1>Instructions for last class</h1>
     <ol>
         <li style="list-style:none;">1. Make a folder for your projects. Right click on your desktop, go to new and click folder</li>
         <li style="list-style: none; margin-left: 20px;"> You can use F2 to rename the folder </li>
